# breakfast-platform

./: .env.example  .gitignore  Procfile  README.md  ai_assistant.py  app.py  debug_ai.py  init_db.py  notifications.py  pyproject.toml  railway.toml  requirements.txt  server.py  test_perplexity.py  现在我将为您创建一个完整的.docx
templates/: index.html
